Fix some FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/pool/trunk@1531891 13f79535-47bb-0310-9956-ffa450edef68